--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <script src='/js/task-01.js'></script> -->
-    <!-- <script src='/js/task-02.js'></script> -->
+    <script src='/js/task-01.js'></script>
+    <script src='/js/task-02.js'></script>
     <script src='/js/task-03.js'></script> 
 </body>
 </html>
